# video-to-photo

./: .gitignore  CLAUDE.md  LICENSE  README.md  family_video_still_extractor_design.md  pyproject.toml  still_extractor.md
configs/: JuliaEllieMay2026.yaml  dirs_JuliaEllieMay2026.txt  dirs_julia2_uncompressed.txt  dirs_june27.txt  dirs_mini.txt  julia2_uncompressed.yaml  june27.yaml  mini.yaml
models/uprighter/: training_log.json
still_extractor/: build_augmentation_preview.py  build_captioning_viewer.py  build_clusters.py  build_confidence_html.py  build_debug_viewer.py  build_faces_review.py  build_index_html.py  build_keypoint_debug.py  build_photo_viewer.py  build_score_calibration.py  build_uprighter_review.py  caption_photos.py  caption_photos_overnight.py  cluster_faces.py  compare_classifiers.py  constants.py  detect_similar.py  diagnose_keypoints.py  export_flagged.py  export_labels.py  face_crop.py  import_labels.py  inventory.py  launch_faces_export_server.py  models.py  pass1_index.py  pass2_score.py  pass3_refine.py  pipeline.py  sampling.py  save_labeled_faces.py  score_frames.py  train_classifier.py  train_uprighter.py  utils.py  worker.py
still_extractor/tools/: benchmark_captioning.py  experiment_caption_prompts.py  review_descriptions.py
