[project]
name = "still-extractor"
version = "0.1.0"
description = "Extract photographic still frames from family videos."
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "av",
    "insightface",
    "onnxruntime-gpu",
    "aesthetic-predictor-v2-5",
    "open_clip_torch",
    "timm",
    "opencv-python",
    "imagehash",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "hdbscan",
    "Pillow",
    "pillow-heif",
    "piexif",
    "pyyaml",
    "tqdm",
    "num2words>=0.5.14",
]

# torch/torchvision/torchaudio are pulled from the PyTorch CUDA index below,
# not PyPI, so they get the cu124 build instead of the default CPU build.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
